# RAG-Document-Summarizer

doucment_summarizer/: README.md  pyproject.toml
doucment_summarizer/src/doucment_summarizer/: app.py  crew.py  main.py  rag_tool.py
doucment_summarizer/src/doucment_summarizer/config/: agents.yaml  tasks.yaml
doucment_summarizer/src/doucment_summarizer/templates/: index.html
